--- a/GameData/ContractPacks/KPlanes/Groups/Start/004-Seaplane.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/004-Seaplane.cfg
@@ -1,32 +1,34 @@
-//GAP-Seaplane - GAP: Build and fly a seaplane!
+// -*- conf-javaprop -*-
+//
+// Copied and modified from GAP/Wright-FirstFlight.cfg
 
 CONTRACT_TYPE
 {
 
-	sortKey = a8
-	
+	sortKey = a004
+
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
 	REQUIREMENT
 	{
 		name = CompleteContract
 		type = CompleteContract
-		
-		contractType = Wright-2500m
+
+		contractType = Start-002-FlyingHigher
 		minCount = 1
-		
+
 	}
-	
+
 	REQUIREMENT
 	{
 		name = CompleteContract
 		type = CompleteContract
-		
-		contractType = Wright-Speed100
+
+		contractType = Start-003-FlyingFaster
 		minCount = 1
-		
+
 	}
-	
+
 
 //DATA NODES TO PROCESS FOR CONTRACT USE
 
@@ -34,55 +36,54 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		
-		craft = GAPcraftGAPSeaplane
-		
-	}
 
+		craft = KPlanesCraft_Start_004
+
+	}
 
 //CONTRACT DESCRIPTION
 
-	name = GAP-Seaplane
-	title = Build and fly a seaplane!
-	group = GAP
-	agent = Giving Aircraft a Purpose
+	name = Start-004-Seaplane
+	title = Format("#autoLOC_KPlanes_Start_004_Seaplane_title", [ "" ] )
+	group = KPlanes_Start
+	agent = Wright Aeronautical
 
-	description = You've proven the airworthiness of your aircraft so far. But can you modify it or design an aircraft that can land on water? We want you to attempt an aviation first - landing an airplane on water, and taking back off again. Our engineers would like to call such an idea a seaplane, and they think it will really be useful to a number of organizations at KSC if the idea can be proven.
+	description = Format("#autoLOC_KPlanes_Start_004_Seaplane_description", [ "" ] )
 
-	synopsis = Land a seaplane on the surface of the water at the waypoint, and take off again and land back at KSC.
+	synopsis = Format("#autoLOC_KPlanes_Start_004_Seaplane_synopsis", [ "" ] )
 
-	notes = Your craft must be an airplane that can land on water horizontally and take off again.
+	notes = Format("#autoLOC_KPlanes_Start_004_Seaplane_notes", [ "" ] )
 
-	completedMessage = Congratulations on another aviation first! You have propelled your organization to one of the most popular organizations on Kerbin. GAP has credited your account with a share of funds from various investors who are excited about your organization's future.
+	completedMessage = Format("#autoLOC_KPlanes_Start_004_Seaplane_completedMessage", [ "" ] )
 
 //Contract Limits
-   	maxCompletions = 1
-   	maxSimultaneous = 1
-//	weight = 10.0
+	maxCompletions = 1
+	maxSimultaneous = 1
+//	weight = 100.0
 
 	autoAccept = false
 	declinable = true
 	cancellable = true
 
-	minExpiry = 7.0
-	maxExpiry = 7.0
+	minExpiry = 0.0
+	maxExpiry = 0.0
 	deadline = 0
 
 //Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = Kerbin
+	targetBody = HomeWorld()
 
 //Contract Rewards
-  	advanceFunds = 5000.0
-  	rewardFunds = 30000.0
-  	rewardReputation = 5.0
- 	rewardScience = 5.0
+	advanceFunds = 30 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 30 * @KPlanes:RewardFunds
+	rewardReputation = 5 * @KPlanes:RewardReputation
+	rewardScience = 5 * @KPlanes:RewardScience
 
 //Contract Penalties
-  	failureFunds = 10000.0
-	failureReputation = 5.0
+	failureFunds = 30 * @KPlanes:FailureFunds
+	failureReputation = 5 * @KPlanes:FailureReputation
 
-	
+
 //PARAMETERS FOR CONTRACT COMPLETION
 
 //Craft definition
@@ -91,7 +92,7 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = Your seaplane must
-		
+
 		define = @/craft
 		dissassociateVesselsOnContractCompletion = true
 
@@ -100,98 +101,181 @@ CONTRACT_TYPE
 			name = HasCrew
 			type = HasCrew
 			title = have a certified pilot
-			
+
 			trait = Pilot
 			minCrew = 1
-		
+
 			disableOnStateChange = false
 			hideChildren = true
 
 		}
-		
+
 		PARAMETER
 		{
 			name = PartValidation
 			type = PartValidation
 			title = have wings
-			
+
 			category = Aero
-			
+
 			disableOnStateChange = false
 			hideChildren = true
 
 		}
 
 		PARAMETER
-		{			            
-			name = ReachState   
+		{
+			name = ReachState
 			type = ReachState
 
 			situation = SPLASHED
-			
+
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = true
-			
+
 		}
-		
+
+		PARAMETER
+		{
+			name = All
+			type = All
+			title = have an air breathing engine only
+
+			PARAMETER
+			{
+				name = PartValidation
+				type = PartValidation
+				title = not have any solid rocket engines
+
+				NONE
+				{
+					MODULE
+					{
+						EngineType = SolidBooster
+
+					}
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			PARAMETER
+			{
+				name = PartValidation
+				type = PartValidation
+				title = not have any liquid rocket engines
+
+				NONE
+				{
+					MODULE
+					{
+						EngineType = LiquidFuel
+
+					}
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any solid rocket fuel
+
+				resource = SolidFuel				
+				minQuantity = 0.0
+				maxQuantity = 0.0
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any oxidizer
+
+				resource = Oxidizer				
+				minQuantity = 0.0
+				maxQuantity = 0.0
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			disableOnStateChange = false
+
+		}
+
 		disableOnStateChange = false
 
 	}
-	
+
 //Land on Water
 	PARAMETER
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = land on water
-		
+
 		vessel = @/craft
-		
+
 		PARAMETER
-		{			            
-			name = ReachState   
+		{
+			name = ReachState
 			type = ReachState
 
 			situation = SPLASHED
-			
+
 			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
-			
+
 		}
-		
+
 		completeInSequence = true
 		hideChildren = true
-		
+
 	}
-	
+
 	PARAMETER
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = and slow to 3.0 m/s or less
-		
+
 		vessel = @/craft
-		
+
 		PARAMETER
-		{			            
-			name = ReachState   
+		{
+			name = ReachState
 			type = ReachState
 
 			situation = SPLASHED
 			maxSpeed = 3.0
-			
+
 			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = true
-			
+
 		}
-		
+
 		completeInSequence = true
 		hideChildren = true
-		
+
 	}
 
 //Take Off From Water
@@ -200,28 +284,28 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = and then go at least 20.0 m/s on water
-		
+
 		vessel = @/craft
-		
+
 		PARAMETER
-		{			            
-			name = ReachState   
+		{
+			name = ReachState
 			type = ReachState
 
 			situation = SPLASHED
 			minSpeed = 20.0
-			
+
 			completeInSequence = true
 			disableOnStateChange = false
 			hideChildren = true
 			hidden = true
-			
+
 		}
 
 		completeInSequence = true
 		disableOnStateChange = true
 		hideChildren = true
-		
+
 	}
 
 	PARAMETER
@@ -229,36 +313,35 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = and then get airborne
-		
+
 		vessel = @/craft
-		
+
 		PARAMETER
-		{			            
-			name = ReachState   
+		{
+			name = ReachState
 			type = ReachState
 
 			situation = FLYING
-			
+
 			completeInSequence = true
 			disableOnStateChange = false
 			hideChildren = true
 			hidden = true
-			
+
 		}
 
 		completeInSequence = true
 		disableOnStateChange = true
 		hideChildren = true
-		
-	}
 
+	}
 //Recovery Parameter - Landing
 	PARAMETER
 	{
 		name = Any
 		type = Any
 		title = and then land and stop
-		
+
 		PARAMETER
 		{
 			name = Any
@@ -270,15 +353,15 @@ CONTRACT_TYPE
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = the KSC Runway
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
-					targetBody = Kerbin
+
+					targetBody = HomeWorld()
 					biome = Runway
 					situation = LANDED
 					maxSpeed = 0.0
@@ -292,21 +375,21 @@ CONTRACT_TYPE
 				hideChildren = true		
 
 			}
-			
+
 			PARAMETER
 			{
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = or the Spaceplane Hangar Air Terminal
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
-					targetBody = Kerbin
+
+					targetBody = HomeWorld()
 					biome = SPH
 					situation = LANDED
 					maxSpeed = 0.0
@@ -315,16 +398,16 @@ CONTRACT_TYPE
 					hideChildren = true
 
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true		
 
 			}
-		
+
 			disableOnStateChange = false
-		
+
 		}
-		
+
 		completeInSequence = true
 		disableOnStateChange = false
 
@@ -336,23 +419,23 @@ CONTRACT_TYPE
 		name = All
 		type = All
 		title = safely
-		
+
 		PARAMETER
 		{
 			name = VesselNotDestroyed
 			type = VesselNotDestroyed
 			title = without destroying your aircraft
-			
+
 			vessel = @/craft
 
 		}
-		
+
 		PARAMETER
 		{
 			name = KerbalDeaths
 			type = KerbalDeaths
 			title = or killing anyone
-			
+
 			vessel = @/craft
 
 		}
@@ -361,5 +444,5 @@ CONTRACT_TYPE
 		disableOnStateChange = true
 
 	}
-	
+
 }
