--- a/GameData/ContractPacks/KPlanes/Groups/Start/005-Helicopter.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/005-Helicopter.cfg
@@ -1,9 +1,11 @@
-//GAP-Helicopter - GAP: Land on a helipad!
+// -*- conf-javaprop -*-
+//
+// Copied and modified from GAP/Wright-FirstFlight.cfg
 
 CONTRACT_TYPE
 {
 
-	sortKey = a7
+	sortKey = a005
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -11,117 +13,77 @@ CONTRACT_TYPE
 	{
 		name = CompleteContract
 		type = CompleteContract
-		
-		contractType = Wright-Speed220
+
+		contractType = Start-002-FlyingHigher
 		minCount = 1
 
 	}
-	
+
 	REQUIREMENT
 	{
 		name = CompleteContract
 		type = CompleteContract
-		
-		contractType = Wright-5000m
+
+		contractType = Start-003-FlyingFaster
 		minCount = 1
 
 	}
-	
-	REQUIREMENT
-	{
-		name = Any
-		type = Any
-		
-		REQUIREMENT
-		{
-			name = Facility
-			type = Facility
-			
-			facility = VehicleAssemblyBuilding		
-			minLevel = 2
-			
-		}
-		
-		REQUIREMENT
-		{
-			name = Facility
-			type = Facility
-			
-			facility = Administration		
-			minLevel = 3
-			
-		}
 
-	}
-	
-	
+
 //DATA NODES TO PROCESS FOR CONTRACT USE
 
 //Contract Specific VesselParameterGroup Definition Key (to prevent conflict with other active contracts)
 	DATA
 	{
 		type = string
-		
-		craft = GAPcraftGAPHelicopter
-		
+
+		craft = KPlanesCraft_Start_005
+
 	}
 
-
 //CONTRACT DESCRIPTION
-	name = GAP-Helicopter
-	title = Land on a helipad!
-	group = GAP
-	agent = Giving Aircraft a Purpose
 
-	description = We want you to test your first helicopter or Vertical Take-Off and Landing (VTOL) prototype. Land on one of the available helipads.
+	name = Start-005-Helicopter
+	title = Format("#autoLOC_KPlanes_Start_005_Helicopter_title", [ "" ] )
+	group = KPlanes_Start
+	agent = Wright Aeronautical
 
-	synopsis = For science (and a few funds)!
+	description = Format("#autoLOC_KPlanes_Start_005_Helicopter_description", [ "" ] )
 
-	notes = Make a helicopter or VTOL and land on a VAB or Administration Building helipad!
+	synopsis = Format("#autoLOC_KPlanes_Start_005_Helicopter_synopsis", [ "" ] )
 
-	completedMessage = Flight Completed! And you're still alive, which is even better since most helicopter and other VTOL test flights have been fatal.
+	notes = Format("#autoLOC_KPlanes_Start_005_Helicopter_notes", [ "" ] )
+
+	completedMessage = Format("#autoLOC_KPlanes_Start_005_Helicopter_completedMessage", [ "" ] )
 
 //Contract Limits
-   	maxCompletions = 1
-   	maxSimultaneous = 1
-//	weight = 10.0
-	
+	maxCompletions = 1
+	maxSimultaneous = 1
+//	weight = 100.0
+
 	autoAccept = false
 	declinable = true
 	cancellable = true
 
-	minExpiry = 7.0
-	maxExpiry = 7.0
+	minExpiry = 0.0
+	maxExpiry = 0.0
 	deadline = 0
 
-//Contract Reward Modifiers	
+//Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = Kerbin
+	targetBody = HomeWorld()
 
 //Contract Rewards
-  	advanceFunds = 5000
-  	rewardFunds = 30000.0
-  	rewardReputation = 10.0
- 	rewardScience = 10.0
+	advanceFunds = 30 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 30 * @KPlanes:RewardFunds
+	rewardReputation = 10 * @KPlanes:RewardReputation
+	rewardScience = 10 * @KPlanes:RewardScience
 
-//Contract Penalties	
-  	failureFunds = 10000.0
- 	failureReputation = 5.0
-	
+//Contract Penalties
+	failureFunds = 30 * @KPlanes:FailureFunds
+	failureReputation = 10 * @KPlanes:FailureReputation
 
-//BEHAVIOURS TO DO WHEN CREATING CONTRACT
-	
-	BEHAVIOUR
-	{
-		name = AwardExperience
-		type = AwardExperience
-		
-		parameter = GAPLand
-		experience = 1
-		
-	}
 
-	
 //PARAMETERS FOR CONTRACT COMPLETION
 
 //Craft definition
@@ -130,7 +92,7 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = Your aircraft must
-		
+
 		define = @/craft
 		dissassociateVesselsOnContractCompletion = true
 
@@ -139,46 +101,142 @@ CONTRACT_TYPE
 			name = HasCrew
 			type = HasCrew
 			title = have a certified pilot
-			
+
 			trait = Pilot
 			minCrew = 1
-		
+
 			disableOnStateChange = false
 			hideChildren = true
 
 		}
-		
+
+		PARAMETER
+		{
+			name = PartValidation
+			type = PartValidation
+			title = have wings
+
+			category = Aero
+
+			disableOnStateChange = false
+			hideChildren = true
+
+		}
+
+		PARAMETER
+		{
+			name = All
+			type = All
+			title = have an air breathing engine only
+
+			PARAMETER
+			{
+				name = PartValidation
+				type = PartValidation
+				title = not have any solid rocket engines
+
+				NONE
+				{
+					MODULE
+					{
+						EngineType = SolidBooster
+
+					}
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			PARAMETER
+			{
+				name = PartValidation
+				type = PartValidation
+				title = not have any liquid rocket engines
+
+				NONE
+				{
+					MODULE
+					{
+						EngineType = LiquidFuel
+
+					}
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any solid rocket fuel
+
+				resource = SolidFuel				
+				minQuantity = 0.0
+				maxQuantity = 0.0
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any oxidizer
+
+				resource = Oxidizer				
+				minQuantity = 0.0
+				maxQuantity = 0.0
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			disableOnStateChange = false
+
+		}
+
 		disableOnStateChange = false
 
 	}
-	
+
 //Recovery Parameter - Landing
 	PARAMETER
 	{
 		name = GAPLand
 		type = Any
 		title = land on a helipad
-		
+
 		PARAMETER
 		{
 			name = Any
 			type = Any
 			title = at either
-			
+
 			PARAMETER
 			{
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = the Vehicle Assembly Building Helipad
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
-					targetBody = Kerbin
+
+					targetBody = HomeWorld()
 					biome = VAB Main Building
 					situation = LANDED
 					maxSpeed = 0.0
@@ -187,18 +245,18 @@ CONTRACT_TYPE
 					hideChildren = true
 
 				}
-				
+
 				disableOnStateChange = false
-				hideChildren = true		
+				hideChildren = true
 
 			}
-			
+
 			PARAMETER
 			{
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = or the Administration Building Helipad
-				
+
 				vessel = @/craft
 
 				PARAMETER
@@ -206,25 +264,25 @@ CONTRACT_TYPE
 					name = ReachState
 					type = ReachState
 
-					targetBody = Kerbin
-					biome = Administration	
+					targetBody = HomeWorld()
+					biome = Administration
 					situation = LANDED
 					maxSpeed = 0.0
-					
+
 					disableOnStateChange = false
 					hideChildren = true
-					
+
 				}
 
 				disableOnStateChange = false
 				hideChildren = true
 
 			}
-		
+
 			disableOnStateChange = false
-		
+
 		}
-		
+
 		completeInSequence = true
 		disableOnStateChange = false
 
@@ -236,30 +294,30 @@ CONTRACT_TYPE
 		name = All
 		type = All
 		title = safely
-		
+
 		PARAMETER
 		{
 			name = VesselNotDestroyed
 			type = VesselNotDestroyed
 			title = without destroying your aircraft
-			
+
 			vessel = @/craft
 
 		}
-		
+
 		PARAMETER
 		{
 			name = KerbalDeaths
 			type = KerbalDeaths
 			title = or killing anyone
-			
+
 			vessel = @/craft
 
 		}
-		
+
 		completeInSequence = true
 		disableOnStateChange = true
-		
+
 	}
-	
+
 }
