--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -26,5 +26,10 @@ Localization
 		#autoLOC_KPlanes_Start_004_Seaplane_notes = Your craft must be an airplane that can land on water horizontally and take off again.
 		#autoLOC_KPlanes_Start_004_Seaplane_completedMessage = Congratulations on another aviation first! You have propelled your organization to one of the most popular organizations. We have credited your account with a share of funds from various investors who are excited about your organization's future.
 
+		#autoLOC_KPlanes_Start_005_Helicopter_title = Land on a helipad!
+		#autoLOC_KPlanes_Start_005_Helicopter_description = We want you to test your first helicopter or Vertical Take-Off and Landing (VTOL) prototype. Land on one of the available helipads.
+		#autoLOC_KPlanes_Start_005_Helicopter_synopsis = For science (and a few funds)!
+		#autoLOC_KPlanes_Start_005_Helicopter_notes = Make a helicopter or VTOL and land on a VAB or Administration Building helipad!
+		#autoLOC_KPlanes_Start_005_Helicopter_completedMessage = Flight Completed! And you're still alive, which is even better since most helicopter and other VTOL test flights have been fatal.
 	}
 }
